# duckdb-sql-ipython-ext

./: README.md  pyproject.toml
src/duckdb_sql/: __init__.py
